[package]
name = "scuptd"
version = "0.0.1"
edition = "2021"
authors = ["Guo Hua <guohua16@outlook.com>"]
description = "ScupT Database"
repository = "https://github.com/scuptio/scuptd/"
homepage = "https://github.com/scuptio/"
documentation = "https://github.com/scuptio/scuptd/README.md"
readme = "README.md"
license = "Apache-2.0"



[dependencies]
